<resources>
    <string name="app_name">SGGW Support System</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email  completions."</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main">SGGW Support System</string>

    <string name="menu_main_item1">Add Incident</string>
    <string name="menu_main_item2">Resolve Incident</string>
    <string name="menu_main_item3">Active Incident</string>
    <string name="menu_main_item4">Contact</string>
    <string name="menu_main_item5">Log out</string>

    <string name="hint_incident_id">IncidentID</string>
    <string name="hint_priority">Priority</string>
    <string name="hint_category">Category</string>
    <string name="hint_assign_to">AssignTo</string>
    <string name="hint_requestor">Requestor</string>
    <string name="hint_request_date">RequestDate</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_status">Status</string>
    <string name="hint_solution">Solution</string>
    <string name="hint_comment">Comment</string>

    <string name="button_create">Create</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
    <string name="button_filter">Filter</string>

    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Top</item>
    </string-array>

    <string-array name="category">
        <item>Desktop</item>
        <item>Printer</item>
    </string-array>

    <string-array name="assign_to">
        <item>name_1.surname_1</item>
        <item>name_2.surname_2</item>
        <item>name_3.surname_3</item>
    </string-array>

    <string-array name="status">
        <item>Open</item>
        <item>In progress</item>
        <item>Pending</item>
        <item>Done</item>
    </string-array>
</resources>
