<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_menu_main_add_incident"
            android:icon="@mipmap/ic_add_incident"
            android:title="@string/menu_main_item1" />
        <item
            android:id="@+id/id_menu_main_resolve_incident"
            android:icon="@mipmap/ic_incident"
            android:title="@string/menu_main_item2" />
        <item
            android:id="@+id/id_menu_main_active_incident"
            android:icon="@mipmap/ic_incident"
            android:title="@string/menu_main_item3" />
        <item
            android:id="@+id/id_menu_main_contact"
            android:icon="@mipmap/ic_contact"
            android:title="@string/menu_main_item4" />
        <item
            android:id="@+id/id_menu_main_log_out"
            android:icon="@mipmap/ic_log_out"
            android:title="@string/menu_main_item5" />
    </group>
</menu>
